--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PerformanceCalculator</title>
+    <title>Aircraft Performance</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'navbar' %>
+    <div role="main" class="container-fluid px-5">
+      <%= render 'notice' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
