Add devise and facebook omniauth authentication

--- a/app/views/aircraft/_form.html.erb
+++ b/app/views/aircraft/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(@aircraft) do |f| %>
   <%= f.input(:type, label: 'Type') %>
-  <%= f.input(:registration, label: 'registration') %>
+  <%= f.input(:registration, label: 'Registration') %>
   <%= f.input(:basic_empty_weight, label: 'Basic Empty Weight') %>
   <%= f.input(:basic_empty_weight_arm, label: 'Basic Empty Weight Arm') %>
   <%= f.input(:pilot_and_pax_arm, label: 'Pilot and Pax Arm') %>
